Fix white flicker when loading background image

--- a/public/scss/landing.scss
+++ b/public/scss/landing.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .intro {
-    background: url('../images/landing/intro_bg.jpg') no-repeat;
+    background: #3B455B url('../images/landing/intro_bg.jpg') no-repeat;
     background-size: cover;
     color: white;
 }
